Rename existing PipelineTests to QueueTests to prepare for upcoming push of new pipeline tests
-These tests are really integration tests for Queue rather than generalized
 pipeline tests, so it makes sense to call them QueueTests.

-Rename test classes and maven build targets, and update shell scripts
 to reflect new naming.

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <sting.packagecommittests.skipped>true</sting.packagecommittests.skipped>
         <sting.packageunittests.skipped>${sting.packagecommittests.skipped}</sting.packageunittests.skipped>
         <sting.packageintegrationtests.skipped>${sting.packagecommittests.skipped}</sting.packageintegrationtests.skipped>
-        <sting.packagepipelinetests.skipped>${sting.packagecommittests.skipped}</sting.packagepipelinetests.skipped>
+        <sting.packagequeuetests.skipped>${sting.packagecommittests.skipped}</sting.packagequeuetests.skipped>
         <sting.packagelargescaletests.skipped>true</sting.packagelargescaletests.skipped>
         <sting.packageknowledgebasetests.skipped>true</sting.packageknowledgebasetests.skipped>
 
@@ -62,7 +62,7 @@
         <sting.serialcommittests.skipped>true</sting.serialcommittests.skipped>
         <sting.serialunittests.skipped>${sting.serialcommittests.skipped}</sting.serialunittests.skipped>
         <sting.serialintegrationtests.skipped>${sting.serialcommittests.skipped}</sting.serialintegrationtests.skipped>
-        <sting.serialpipelinetests.skipped>${sting.serialcommittests.skipped}</sting.serialpipelinetests.skipped>
+        <sting.serialqueuetests.skipped>${sting.serialcommittests.skipped}</sting.serialqueuetests.skipped>
         <sting.seriallargescaletests.skipped>true</sting.seriallargescaletests.skipped>
         <sting.serialknowledgebasetests.skipped>true</sting.serialknowledgebasetests.skipped>
     </properties>
@@ -561,7 +561,7 @@
                             <sting.packagetests.artifactId>${sting.packagetests.artifactId}</sting.packagetests.artifactId>
                             <sting.packagetests.testClasses>${project.build.testOutputDirectory}</sting.packagetests.testClasses>
                             <sting.packagetests.basedir>${project.basedir}</sting.packagetests.basedir>
-                            <sting.pipelinetests.run>${sting.pipelinetests.run}</sting.pipelinetests.run>
+                            <sting.queuetests.run>${sting.queuetests.run}</sting.queuetests.run>
                             <maven.surefire.debug>${maven.surefire.debug}</maven.surefire.debug>
                             <maven.failsafe.debug>${maven.failsafe.debug}</maven.failsafe.debug>
                         </properties>
@@ -613,7 +613,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>package-pipelinetests</id>
+                            <id>package-queuetests</id>
                             <goals>
                                 <goal>integration-test</goal>
                                 <goal>verify</goal>
@@ -622,11 +622,11 @@
                                 <goals>
                                     <goal>verify</goal>
                                 </goals>
-                                <reportsDirectory>${project.build.directory}/invoker-reports/pipeline/${it.test}</reportsDirectory>
-                                <skipInvocation>${sting.packagepipelinetests.skipped}</skipInvocation>
+                                <reportsDirectory>${project.build.directory}/invoker-reports/queuetest/${it.test}</reportsDirectory>
+                                <skipInvocation>${sting.packagequeuetests.skipped}</skipInvocation>
                                 <properties>
                                     <integrationtests.profile.enabled>true</integrationtests.profile.enabled>
-                                    <sting.packagepipelinetests.skipped>${sting.packagepipelinetests.skipped}</sting.packagepipelinetests.skipped>
+                                    <sting.packagequeuetests.skipped>${sting.packagequeuetests.skipped}</sting.packagequeuetests.skipped>
                                 </properties>
                             </configuration>
                         </execution>
