--- a/public/queue-framework/pom.xml
+++ b/public/queue-framework/pom.xml
@@ -198,7 +198,7 @@
                         <id>package-knowledgebasetests</id>
                     </execution>
                     <execution>
-                        <id>package-pipelinetests</id>
+                        <id>package-queuetests</id>
                     </execution>
                 </executions>
             </plugin>
