--- a/public/queue-package/pom.xml
+++ b/public/queue-package/pom.xml
@@ -67,6 +67,11 @@
             <groupId>net.sf.snpeff</groupId>
             <artifactId>snpeff</artifactId>
         </dependency>
+        <!-- Workaround - depend on commons-httpclient to prevent shade from eliminating IgnoreCookiesSpec class -->
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+        </dependency>
         <!-- Required for binary-dist assembly, excluded by shade -->
         <dependency>
             <groupId>${project.groupId}</groupId>
