--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -189,6 +189,11 @@
                 <version>3.2.1</version>
             </dependency>
             <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-math</artifactId>
                 <version>2.2</version>
