--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,18 @@
                                         <exclude>org.broadinstitute.sting:*:tar.bz2:example-resources</exclude>
                                     </excludes>
                                 </artifactSet>
+                                <filters>
+                                    <!--
+                                    NOTE: Removing cofoja's annotation service to allow "javac -cp GenomeAnalysisTK.jar ..." without
+                                    needing an additional -proc:none argument. Using *:* to catch shaded GATK in Queue package.
+                                    -->
+                                    <filter>
+                                        <artifact>*:*</artifact>
+                                        <excludes>
+                                            <exclude>META-INF/services/javax.annotation.processing.Processor</exclude>
+                                        </excludes>
+                                    </filter>
+                                </filters>
                                 <transformers>
                                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                         <manifestEntries>
