--- a/public/VectorPairHMM/pom.xml
+++ b/public/VectorPairHMM/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.broadinstitute.sting</groupId>
         <artifactId>sting-root</artifactId>
-        <version>2.8-SNAPSHOT</version>
+        <version>3.2-SNAPSHOT</version>
         <relativePath>../../public/sting-root</relativePath>
     </parent>
 
@@ -57,6 +57,9 @@
                             <workingDirectory>src/main/c++</workingDirectory>
                             <environmentVariables>
                                 <JRE_HOME>${java.home}</JRE_HOME>
+                                <!--<USE_GCC>1</USE_GCC>-->
+                                <!--<C_COMPILER>/opt/gcc-4.8.2/bin/gcc</C_COMPILER>-->
+                                <!--<CPP_COMPILER>/opt/gcc-4.8.2/bin/g++</CPP_COMPILER>-->
                                 <OUTPUT_DIR>${project.build.directory}</OUTPUT_DIR>
                             </environmentVariables>
                         </configuration>
