--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.broadinstitute.sting</groupId>
         <artifactId>sting-root</artifactId>
-        <version>3.1-SNAPSHOT</version>
+        <version>3.1</version>
         <relativePath>public/sting-root</relativePath>
     </parent>
 
