--- a/public/package-tests/pom.xml
+++ b/public/package-tests/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.broadinstitute.sting</groupId>
         <artifactId>sting-root</artifactId>
-        <version>3.1</version>
+        <version>3.2-SNAPSHOT</version>
         <relativePath>../sting-root</relativePath>
     </parent>
 
