--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -136,7 +136,7 @@
             <dependency>
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
-                <version>0.9.8</version>
+                <version>0.9.9-RC1</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
