Updates to GATK classes and POMs that need updating, plus RodSystemValidation md5 updates. GATK classes accessing package protected htsjdk classes changed to new package names. POMs updated to support merging of sam/tribble/variant -> htsjdk and changes to picard artifact. RodSystemValidation outputs changed due to variant codec packages changes, requiring test md5 updates. Second of four commits for picard/htsjdk package rename.

--- a/public/external-example/pom.xml
+++ b/public/external-example/pom.xml
@@ -146,13 +146,7 @@
                                     </includes>
                                 </filter>
                                 <filter>
-                                    <artifact>org.broad:tribble</artifact>
-                                    <includes>
-                                        <include>**</include>
-                                    </includes>
-                                </filter>
-                                <filter>
-                                    <artifact>org.broadinstitute:variant</artifact>
+                                    <artifact>samtools:htsjdk</artifact>
                                     <includes>
                                         <include>**</include>
                                     </includes>
