--- a/public/queue-package/pom.xml
+++ b/public/queue-package/pom.xml
@@ -44,7 +44,7 @@
         </dependency>
         <!-- Picard -->
         <dependency>
-            <groupId>net.sf</groupId>
+            <groupId>picard</groupId>
             <artifactId>picard</artifactId>
         </dependency>
         <!-- JavaMail -->
