Bug fix for poms missing package test artifacts.

--- a/public/gatk-engine/pom.xml
+++ b/public/gatk-engine/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <gatk.basedir>${project.basedir}/../..</gatk.basedir>
+        <gatk.packagetests.artifactId>gatk-package-distribution</gatk.packagetests.artifactId>
     </properties>
 
     <dependencies>
