--- a/public/gatk-utils/pom.xml
+++ b/public/gatk-utils/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <gatk.basedir>${project.basedir}/../..</gatk.basedir>
+        <gatk.packagetests.artifactId>gatk-package-distribution</gatk.packagetests.artifactId>
         <gsalib.packagedir>org/broadinstitute/gatk/utils/R</gsalib.packagedir>
         <gsalib.filename>gsalib.tar.gz</gsalib.filename>
     </properties>
