--- a/public/external-example/pom.xml
+++ b/public/external-example/pom.xml
@@ -204,6 +204,10 @@
                             <includes>
                                 <include>**/*UnitTest.class</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <gatkdir>${gatk.basedir}</gatkdir>
+                                <testType>unit</testType>
+                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
@@ -236,6 +240,10 @@
                             <includes>
                                 <include>**/*IntegrationTest.class</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <gatkdir>${gatk.basedir}</gatkdir>
+                                <testType>integrationtest</testType>
+                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
