Now passing in the path to the GATK directory to tests. Changed tests and scripts to use gatkdir full path instead of relative testdata/qscripts symbolic links. Although symlinks not created, left the symlink deletion script execution with a comment about future removal. Re-enabled example UG pipeline queue test. Replaced all hardcoded strings of {public,private}/testdata with BaseTest variables. Refactored temp list creation method from ListFileUtilsUnitTest to BaseTest.createTempListFile. Removed list files with hardcoded paths, now using createTempListFile instead with private test dir variable.

--- a/public/external-example/pom.xml
+++ b/public/external-example/pom.xml
@@ -185,6 +185,7 @@
                     <failIfNoTests>false</failIfNoTests>
                     <!-- Pass various system properties -->
                     <systemPropertyVariables>
+                        <gatkdir>${gatk.basedir}</gatkdir>
                         <java.io.tmpdir>${java.io.tmpdir}</java.io.tmpdir>
                     </systemPropertyVariables>
                 </configuration>
@@ -204,6 +205,9 @@
                             <includes>
                                 <include>**/*UnitTest.class</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <testType>unit</testType>
+                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
@@ -220,6 +224,7 @@
                     <failIfNoTests>false</failIfNoTests>
                     <!-- Pass various system properties -->
                     <systemPropertyVariables>
+                        <gatkdir>${gatk.basedir}</gatkdir>
                         <java.io.tmpdir>${java.io.tmpdir}</java.io.tmpdir>
                     </systemPropertyVariables>
                 </configuration>
@@ -236,6 +241,9 @@
                             <includes>
                                 <include>**/*IntegrationTest.class</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <testType>integrationtest</testType>
+                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
