--- a/public/gatk-engine/pom.xml
+++ b/public/gatk-engine/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.broadinstitute.gatk</groupId>
         <artifactId>gatk-aggregator</artifactId>
-        <version>3.3</version>
+        <version>3.4-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
