--- a/public/pom.xml
+++ b/public/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.broadinstitute.gatk</groupId>
         <artifactId>gatk-root</artifactId>
-        <version>3.3</version>
+        <version>3.4-SNAPSHOT</version>
         <relativePath>gatk-root</relativePath>
     </parent>
 
